[package]
name = "unipen-cli"
version = "0.1.0"
edition.workspace = true
description = "A CLI for `unipen`: for the parsing, validation, and querying of the UniPen format for on-line handwriting data."
repository.workspace = true
license.workspace = true
keywords = ["unipen", "handwriting"]
categories = ["cli"]

[dependencies]
unipen = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
