[package]
name = "unipen-explorer"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
# TODO appropriate keywords, categories
keywords = ["unipen", "handwriting"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unipen = { workspace = true }
