[package]
name = "unipen"
version = "0.1.0"
edition.workspace = true
description = "A library for the parsing, validation, and querying of the UniPen format for on-line handwriting data."
repository.workspace = true
license.workspace = true
# TODO appropriate keywords, categories
keywords = ["unipen", "handwriting", "parser", "library"]
categories = ["parser-implementations"]

[dependencies]
lazy-regex = { workspace = true }
log = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"], optional = true }
thiserror = { workspace = true }


[features]
default = []
serde = ["dep:serde"]
